k8s/atuin/atuin-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin-server-nodeport
  labels:
    app: atuin
    component: server
spec:
  type: NodePort
  ports:
  - port: 8888
    targetPort: 8888
    nodePort: 30888  # You can access via <node-tailscale-ip>:30888
    protocol: TCP
    name: http
  selector:
    app: atuin
    component: server
